packages/core/src/components/split-button/split-button.scss
/*
 * SPDX-FileCopyrightText: 2022 Siemens AG
 *
 * SPDX-License-Identifier: MIT
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the root directory of this source tree.
 */

:host {
  display: block;

  .middle-gap {
    gap: 2px;
  }

  .middleBorder {
    border-top-width: 2px;
    border-right-width: 1px;
    border-left-width: 2px;
    border-bottom-width: 2px;
  }
}

